# ethglobal-unite-defi

./: .gitignore  README.md
betswap-ai/: 01-user-create-lock.ts  BETSWAP_AI_README.md  BETSWAP_AI_SUMMARY.md  CROSS_CHAIN_DEMO.md  Cargo.toml  check-account-balance.ts  check-usdc-contract.ts  deploy-dutch-auction.ts  deploy-mock-usdc.ts  deploy-near.ts  deploy-shade-agent-solver.ts  deployment-betswap-ai.json  hardhat.config.cjs  package-lock.json  package.json  setup-usdc-for-account.ts
betswap-ai/contracts/: BetSwapAI.sol  DutchAuction.sol  HTLC.sol  MockUSDC.sol  ShadeAgentSolver.sol
betswap-ai/frontend/: README.md  package-lock.json  setup.sh
betswap-ai/frontend/.next/: prerender-manifest.json  trace
betswap-ai/frontend/.next/cache/: .previewinfo  .tsbuildinfo
betswap-ai/frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
betswap-ai/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
betswap-ai/frontend/.next/server/vendor-chunks/: @adraffy.js  @noble.js  @swc.js  base-x.js  bn.js.js  (+18 more)
betswap-ai/frontend/app/: page.tsx
betswap-ai/frontend/utils/: wallet-helpers.ts
betswap-ai/scripts/: approve-usdc.ts  auction-escrow-integration.ts  betswap-ai-demo.ts  check-balance.ts  check-sepolia-contract.ts  dutch-auction-simple-demo.ts  dutch-auction.ts  get-sepolia-eth.ts  near-to-ethereum-demo.ts  setup-escrow-for-testing.ts
betswap-ai/scripts/test/: check-eth-lock.js  debug-hash.js  test-balance.js  test-hash.js  test-htlc.js  test-preimage-without-prefix.js  verify-hashlock.js
near-dutch-auction/: Cargo.toml
(+645 files in other folders)
