[package]
name = "near-escrow-src"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.0.0"
sha2 = "0.10.8"
borsh = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4.3", features = ["serde"] }
schemars = "0.8.22"

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }