[package]
name = "near-dutch-auction"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.15.1"
borsh = "1.5.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
hex = "0.4"
